--- a/src/components/ApiError/ApiError.sass
+++ b/src/components/ApiError/ApiError.sass
@@ -11,5 +11,10 @@
     line-height: 150%
     letter-spacing: 2.4px
     text-transform: uppercase
+    min-width: 250px
     color: variables.$main-color
     font-family: variables.$second-font
+
+@media (max-width: variables.$tablet-width-breakpoint)
+    .apierror
+        font-size: 1.4rem
