--- a/src/components/CartSummary/CartSummary.sass
+++ b/src/components/CartSummary/CartSummary.sass
@@ -37,3 +37,7 @@
         transition-duration: .8s
         transition-timing-function: cubic-bezier(.17,.67,.33,.97)
         margin-top: 30px
+
+@media (max-width: variables.$medium-mobile-width-breakpoint)
+    .cartsummary
+        font-size: 1.5rem
