--- a/src/components/Listing/Listing.sass
+++ b/src/components/Listing/Listing.sass
@@ -71,3 +71,10 @@
         width: 50%
         height: 1px
         background-color: rgb(0, 0, 0)
+
+@media (max-width: variables.$tablet-width-breakpoint)
+    .listing
+        &__pagination
+            font-size: 2.2rem
+        &__pagination-link
+            padding: 10px
