--- a/src/components/Submenu/Submenu.sass
+++ b/src/components/Submenu/Submenu.sass
@@ -6,14 +6,13 @@
     top: 91px
     height: 51px
     background-color: variables.$secondary-color
-    margin-top: 120px
-    transform: translateX(0px)
+    margin-top: 3.5vw
+    transform: translateX(0)
     transition: top .3s, width .3s, transform .3s
     list-style: none
     z-index: 3
     &__list
         position: relative
-        +mixins.positioning(flex,row,space-around,center,nowrap)
         width: 100%
         height: 100%
         top: 50%
@@ -26,5 +25,24 @@
             width: calc( 100% + 12vw )
             border-right: none
             border-left: none
+    &__list-wrapper
+        +mixins.positioning(flex,row,space-around,center,nowrap)
+        height: 100%
+        scroll-behavior: smooth
+        &::-webkit-scrollbar
+            height: 4px
+
     &.submenu--down
         top: 146px
+
+@media (max-width: variables.$tablet-width-breakpoint)
+    .submenu
+        margin-top: 50px
+
+@media (max-width: variables.$big-mobile-width-breakpoint)
+    .submenu
+        &__list-wrapper
+            overflow-x: scroll
+            justify-content: flex-start
+        &.submenu--down
+            top: 91px
