--- a/src/components/TopSlider/TopSlider.sass
+++ b/src/components/TopSlider/TopSlider.sass
@@ -7,13 +7,13 @@
     left: 0
     right: 0
     height: 65px
-    padding: 15px 50px
+    padding: 15px 2.6vw
     background-color: variables.$main-color
     transition: height .4s, padding .4s
     z-index: 1
     &.topslider--closed
         height: 0
-        padding: 0px 50px
+        padding: 0px 2.6vw
     &__inner
         position: relative
         width: 100%
