--- a/src/components/TopSliderNavigator/TopSliderNavigator.sass
+++ b/src/components/TopSliderNavigator/TopSliderNavigator.sass
@@ -33,3 +33,10 @@
         transition-delay: 0s
     &__next
         transition-delay: .1s
+
+@media (max-width: variables.$big-mobile-width-breakpoint)
+    .topslidernavigator
+        width: 32px
+        padding: 0 10px
+        &__buttons
+            display: none
