--- a/src/pages/Contact/Contact.sass
+++ b/src/pages/Contact/Contact.sass
@@ -71,6 +71,7 @@
             width: 100%
             order: 2
         &__row-right
+            padding: 0 6vw 6vw 6vw
             width: 100%
             order: 1
 
