--- a/src/components/AboutSlider/AboutSlider.sass
+++ b/src/components/AboutSlider/AboutSlider.sass
@@ -11,6 +11,9 @@
     height: 870px
     padding: 6vw 6vw
     transition: .6s
+    &__header-holder
+        max-width: 50%
+        min-width: 500px
     &__cta
         position: absolute
         bottom: 0
@@ -53,3 +56,15 @@
         color: variables.$main-color
         font-size: 2.6rem
         transition: .3s
+
+@media (max-width: variables.$big-mobile-width-breakpoint)
+    .aboutslider
+        &__arrow
+            width: 40px
+            height: 40px
+
+@media (max-width: variables.$medium-mobile-width-breakpoint)
+    .aboutslider
+        height: 680px
+        &__header-holder
+            min-width: 350px
