--- a/src/components/AnimatedPageLink/AnimatedPageLink.sass
+++ b/src/components/AnimatedPageLink/AnimatedPageLink.sass
@@ -3,7 +3,7 @@
 
 .animatedpagelink
     +mixins.positioning(flex,row,center,center,nowrap)
-    padding: 6vw 0
+    padding: 100px 0
     &__link
         +mixins.positioning(flex,row,center,center,nowrap)
         font-family: variables.$second-font
