--- a/src/components/FaqElement/FaqElement.sass
+++ b/src/components/FaqElement/FaqElement.sass
@@ -18,6 +18,9 @@
             border: 1px solid variables.$main-color
         &.faqelement__question--active
             border: 1px solid variables.$main-color
+    &__text
+        margin-right: 15px
+        line-height: 150%
     &__button
         +mixins.positioning(flex,row,center,center,nowrap)
         padding: 3px
@@ -37,7 +40,7 @@
             display: block
             text-transform: none
             font-size: 1.4rem
-            line-height: 200%
+            line-height: 150%
             color: variables.$text-gray
             animation-name: answer-opacity
             animation-duration: 1s
@@ -47,3 +50,12 @@
         opacity: 0
     100%
         opacity: 1
+
+@media (max-width: variables.$medium-mobile-width-breakpoint)
+    .faqelement
+        font-size: 1.3rem
+        &__question
+            padding: 8px 15px
+        &__answer
+            padding: 30px 15px 15px 15px
+            font-size: 1.3rem
