--- a/src/components/Gallery/Gallery.sass
+++ b/src/components/Gallery/Gallery.sass
@@ -17,6 +17,7 @@
     &__image
         display: block
         width: 100%
+        min-width: 100%
         margin-right: 30px
     &__image:last-child
         margin-right: 0
@@ -43,3 +44,27 @@
         font-weight: 500
         text-transform: uppercase
         background-color: variables.$secondary-color
+
+@media (max-width: variables.$tablet-width-breakpoint)
+    .gallery
+        width: 100%
+        padding-right: 0
+        &__out-of-stock
+            right: 0
+
+@media (max-width: variables.$medium-mobile-width-breakpoint)
+    .gallery
+        &__image-listing
+            width: 22%
+            margin-right: 10px
+
+@media (max-width: variables.$small-mobile-width-breakpoint)
+    .gallery
+        &__listing
+            gap: calc( 4% / 3 )
+        &__image-listing
+            width: 24%
+            margin-right: 0
+        &__out-of-stock
+            font-size: 1.2rem
+            padding: 10px 20px
