--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -27,8 +27,9 @@
         padding-bottom: 10px
     &__big-title
         font-family: variables.$main-font
-        font-size: 64px
+        font-size: calc(32px + 32 * ((100vw - 320px) / 1600))
         font-weight: 500
+        line-height: normal
     &__bottom-line
         position: absolute
         width: 40px
@@ -44,4 +45,23 @@
         font-size: 2.4rem
         font-weight: 300
         line-height: 150%
-        max-width: 700px
+        letter-spacing: .6px
+
+@media (max-width: variables.$tablet-width-breakpoint)
+    .header
+        &__big-title
+            font-size: 4.6rem
+        &__small-title
+            margin: 10px 0
+        &__text
+            font-size: 2.2rem
+
+@media (max-width: variables.$small-mobile-width-breakpoint)
+    .header
+        &__big-title
+            font-size: 2.8rem
+            letter-spacing: 3.5px
+        &__small-title
+            font-size: 1.75rem
+        &__text
+            font-size: 2.1rem
