--- a/src/components/LegalPopup/LegalPopup.sass
+++ b/src/components/LegalPopup/LegalPopup.sass
@@ -10,6 +10,7 @@
     background-image: url(https://raw.githubusercontent.com/Ajihat/panda-gin-images/main/legalImage/legal-cover.jpg)
     background-position: center
     background-repeat: no-repeat
+    background-size: cover
     z-index: 10
     &__white-layer
         position: absolute
@@ -26,6 +27,7 @@
         left: 50%
         width: 90%
         transform: translate(-50%, 0)
+        padding: 15px
         font-family: variables.$second-font
         font-size: 1.2rem
         line-height: 1.4rem
@@ -65,3 +67,23 @@
         &:hover
             color: variables.$secondary-color
             background-color: variables.$main-color
+
+@media (max-width: variables.$big-mobile-width-breakpoint)
+    .legalpopup
+        &__buttons
+            flex-direction: column
+        &__btn
+            margin: 15px
+
+@media (max-width: 937px) and (orientation: landscape)
+    .legalpopup
+        &__inner
+            top: 35%
+        &__full
+            width: 150px
+        &__logo
+            margin-bottom: 15px
+        &__buttons
+            flex-direction: row
+        &__btn
+            margin: 25px
