--- a/src/components/PageLink/PageLink.sass
+++ b/src/components/PageLink/PageLink.sass
@@ -29,3 +29,10 @@
             margin-right: 10px
             transform: rotate(0deg)
             order: 1
+
+@media (max-width: variables.$medium-mobile-width-breakpoint)
+    .pagelink
+        &__text
+            font-size: 1.3rem
+        &__arrow
+            transform: rotate(180deg) scale(0.8)
