--- a/src/components/PersonalNav/PersonalNav.sass
+++ b/src/components/PersonalNav/PersonalNav.sass
@@ -8,14 +8,14 @@
     padding: 3vw
     border: 1px solid variables.$main-color
     min-height: 50vh
-    min-width: 270px
     &__nav-list
         font-family: variables.$second-font
         text-transform: uppercase
-        font-size: 1.5rem
+        font-size: 1.4rem
         list-style: none
+        line-height: 150%
         font-weight: 400
-        letter-spacing: 2.4px
+        letter-spacing: .6px
     &__nav-item
         margin: 20px 0
     &__nav-link
@@ -25,3 +25,10 @@
             color: variables.$main-color
     &__btn-holder
         width: 100%
+
+@media (max-width: variables.$tablet-width-breakpoint)
+    .personalnav
+        min-height: auto
+        padding: 35px
+        &__nav
+            margin-bottom: 38px
