--- a/src/components/ProductTile/ProductTile.sass
+++ b/src/components/ProductTile/ProductTile.sass
@@ -25,10 +25,10 @@
         padding: 7.5px 15px
     &__content-left
         +mixins.positioning(flex,column,space-between,flex-start,wrap)
-        width: 75%
+        width: calc( 100% - 80px )
     &__content-right
         +mixins.positioning(flex,column,space-between,flex-end,wrap)
-        width: 20%
+        width: 80px
         height: 50%
     &__header
         position: relative
@@ -59,7 +59,7 @@
         position: absolute
         top: 5px
         right: 5px
-        padding: 10px
+        padding: 10px 30px
         font-family: variables.$second-font
         font-size: 1.44rem
         line-height: 200%
@@ -73,3 +73,17 @@
         bottom: 0
         left: 0
         background-color: variables.$main-color
+
+@media (max-width: variables.$tablet-width-breakpoint)
+    .producttile
+        width: 47%
+
+@media (max-width: variables.$medium-mobile-width-breakpoint)
+    .producttile
+        width: 100%
+
+@media (max-width: variables.$small-mobile-width-breakpoint)
+    .producttile
+        &__out-of-stock
+            font-size: 1.2rem
+            padding: 10px 20px
