--- a/src/components/Socials/Socials.sass
+++ b/src/components/Socials/Socials.sass
@@ -2,15 +2,10 @@
 @use '../../sass/variables'
 
 .socials
+    display: block
     +mixins.positioning(flex,row,space-around,center,nowrap)
-    width: 80%
-    font-size: 2.4rem
-    &.socials--small
-        width: 25%
-        font-size: 1.8rem
-    &__link
-        display: block
-        margin: 7.5px
+    font-size: 1.8rem
+    margin-right: 5px
     &__icon
         color: variables.$main-color
         transition: .3s
