--- a/src/pages/Personal/Personal.sass
+++ b/src/pages/Personal/Personal.sass
@@ -16,3 +16,16 @@
     &__right
         width: 75%
         padding-left: 6vw
+
+@media (max-width: variables.$tablet-width-breakpoint)
+    .personal
+        margin-bottom: 80px
+        &__content
+            flex-wrap: wrap
+        &__left
+            width: 100%
+        &__right
+            width: 100%
+            padding-left: 0
+            margin-top: 50px
+            min-height: 300px
