--- a/src/pages/ProductPage/ProductPage.sass
+++ b/src/pages/ProductPage/ProductPage.sass
@@ -4,7 +4,7 @@
 .productpage
     &__inner
         position: relative
-        padding: 4.5vw 6vw
+        padding: 6vw 6vw
     &__link-holder
         +mixins.positioning(flex,row,flex-start,center,nowrap)
     &__product-holder
@@ -13,4 +13,14 @@
         padding: 3vw
         border: 1px solid variables.$main-color
         margin-top: 3vw
-        min-height: 15vw
+        min-height: 400px
+
+@media (max-width: variables.$tablet-width-breakpoint)
+    .productpage
+        &__product-holder
+            flex-wrap: wrap
+            margin-top: 30px
+@media (max-width: variables.$big-mobile-width-breakpoint)
+    .productpage
+        &__inner
+            padding: 60px 6vw
