--- a/src/pages/Shop/Shop.sass
+++ b/src/pages/Shop/Shop.sass
@@ -2,11 +2,20 @@
 @use '../../sass/variables'
 
 .shop
-    padding: 120px 6vw
+    padding: 6vw 6vw
     &__listing
         position: relative
-        +mixins.positioning(flex,row,space-between,stretch,wrap)
-        row-gap: 2.65vw
-        padding-top: 70px
-        margin: 0 6vw
+        +mixins.positioning(flex,row,flex-start,stretch,wrap)
+        gap: 3.06vw
+        padding-top: 4vw
         min-height: 500px
+
+@media (max-width: variables.$tablet-width-breakpoint)
+    .shop
+        &__listing
+            padding-top: 50px
+            gap: 5.2vw
+
+@media (max-width: variables.$big-mobile-width-breakpoint)
+    .shop
+        padding: 60px 6vw
