--- a/src/sass/variables.sass
+++ b/src/sass/variables.sass
@@ -16,6 +16,7 @@ $main-font: 'Playfair display', sans-serif
 $second-font: 'Work Sans', sans-serif
 
 //Viewport Breakpoints
-
 $tablet-width-breakpoint: 1024px
-$mobile-width-breakpoint: 764px
+$big-mobile-width-breakpoint: 764px
+$medium-mobile-width-breakpoint: 600px
+$small-mobile-width-breakpoint: 420px
