initialize mock service worker

--- a/frontend/src/sass/Forms.sass
+++ b/frontend/src/sass/Forms.sass
@@ -77,6 +77,7 @@
     &__api-error, &__api-sucess
         font-size: 1.5rem
         letter-spacing: 1.4px
+        line-height: 150%
         background-color: variables.$error-color
         color: variables.$secondary-color
         text-transform: uppercase
