useContact custom hook refactor

--- a/frontend/src/pages/Contact/Contact.sass
+++ b/frontend/src/pages/Contact/Contact.sass
@@ -38,6 +38,7 @@
         &:hover
             color: variables.$text-hover-color
     &__text
+        display: block
         font-weight: 400
         line-height: 200%
         font-size: 1.5rem
