--- a/frontend/src/components/CocktailTile/CocktailTile.sass
+++ b/frontend/src/components/CocktailTile/CocktailTile.sass
@@ -39,3 +39,11 @@
         letter-spacing: .6px
         font-weight: 300
         line-height: 150%
+
+@media (max-width: variables.$tablet-width-breakpoint)
+    .cocktailtile
+        width: 47%
+
+@media (max-width: variables.$medium-mobile-width-breakpoint)
+    .cocktailtile
+        width: 100%
