--- a/frontend/src/components/CocktailPopup/CocktailPopup.sass
+++ b/frontend/src/components/CocktailPopup/CocktailPopup.sass
@@ -21,21 +21,102 @@
         top: 50%
         left: 50%
         width: 65%
-        min-height: 98%
+        min-height: 95%
         max-height: 98%
         transform: translate(-50%,-50%)
         background-color: variables.$secondary-color
         z-index: 5
         padding: 3vw 6vw
         overflow-y: scroll
+    &__inner
+        +mixins.positioning(flex,row,space-between,flex-start,nowrap)
+    &__left
+        width: 50%
+    &__right
+        width: 50%
+        padding-left: 3vw
+    &__img
+        display: block
+        aspect-ratio: 1/1.5
+        width: 100%
     &__close-btn
         position: absolute
         top: 10px
         right: 5px
         cursor: pointer
+        z-index: 5
+    &__minor-heading
+        font-family: variables.$second-font
+        color: variables.$main-color
+        font-size: 1.6rem
+        font-weight: 500
+        text-transform: uppercase
+        text-decoration: underline
+        line-height: 200%
+        margin: 16px 0
+    &__text
+        font-family: variables.$second-font
+        color: variables.$text-gray
+        font-size: 1.6rem
+        font-weight: 400
+        line-height: 200%
+        margin: 16px 0
+    &__button
+        position: absolute
+        +mixins.positioning(flex,row,center,center,nowrap)
+        top: 50%
+        left: 30px
+        width: 40px
+        height: 40px
+        background-color: transparent
+        border-radius: 50%
+        border: 1px solid variables.$main-color
+        transform: translateY(-50%)
+        cursor: pointer
+        &.cocktailpopup__button--right
+            left: initial
+            right: 30px
+    &__icon
+        font-size: 1.8rem
 
 @keyframes popup-opacity
     0%
         opacity: 0
     100%
         opacity: 1
+
+@media (max-width: 1350px)
+    .cocktailpopup
+        &__content
+            width: 80%
+            min-height: 82%
+        &__button
+            left: 15px
+            &.cocktailpopup__button--right
+                right: 15px
+
+@media (max-width: variables.$tablet-width-breakpoint)
+    .cocktailpopup
+        &__content
+            width: 98%
+            min-height: 98%
+            padding: 10vw 10vw
+        &__button
+            position: fixed
+
+@media (max-width: variables.$big-mobile-width-breakpoint)
+    .cocktailpopup
+        &__content
+            padding: 10vw 17vw
+        &__inner
+            flex-wrap: wrap
+        &__left
+            width: 100%
+            margin-bottom: 40px
+        &__right
+            width: 100%
+            padding-left: 0
+        &__button
+            left: 10px
+            &.cocktailpopup__button--right
+                right: 10px
