--- a/frontend/src/components/Header/Header.sass
+++ b/frontend/src/components/Header/Header.sass
@@ -23,6 +23,7 @@
         text-transform: uppercase
         font-family: variables.$second-font
         font-weight: 300
+        line-height: 150%
         margin: 15px 0
         padding-bottom: 10px
     &__big-title
