--- a/frontend/src/components/PrimaryButton/PrimaryButton.sass
+++ b/frontend/src/components/PrimaryButton/PrimaryButton.sass
@@ -29,15 +29,14 @@
         background-color: variables.$main-color
         z-index: 1
         opacity: 1
+        bottom: 0
+        left: -1px
+        transform: rotate(180deg)
         transition: height .2s, transform 0s, opacity .7s
-        &.primarybutton__layer--up
-            top: 0
-            left: 0
-            transform: rotate(0deg)
-        &.primarybutton__layer--down
-            bottom: 0
-            left: -1px
-            transform: rotate(180deg)
+    &:hover &__layer
+        top: 0
+        left: 0
+        transform: rotate(0deg)
     &:hover &__text
         color: variables.$main-color
     &:hover &__layer
