change scrollbars color

--- a/frontend/src/sass/App.sass
+++ b/frontend/src/sass/App.sass
@@ -17,7 +17,7 @@ html.no-smooth-scrolling
     scroll-behavior: auto
 body.no-scroll::-webkit-scrollbar-thumb
     background-color: variables.$secondary-color
-    scrollbar-color: variables.$secondary-color variables.$secondary-color
+    // scrollbar-color: variables.$secondary-color variables.$secondary-color
 body
     scroll-behavior: smooth
 body.no-scroll
@@ -27,7 +27,7 @@ body.no-scroll
 
 *
     scrollbar-width: auto
-    scrollbar-color: variables.$main-color variables.$main-color
+    // scrollbar-color: variables.$main-color variables.$main-color
 
 //Chrome, Edge, and Safari 
 *::-webkit-scrollbar
